{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 28,
  "lineage": "c9213350-4ad1-4afa-a1d7-0f2308316cb7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mig",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T02:00:16.655-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-web-mig",
            "log_config": [],
            "name": "tf-vpc-allow-web-mig",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/networks/gogle-vpc",
            "priority": 1000,
            "project": "midyear-spot-368821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-web-mig",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-mig"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.workspace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T02:00:16.537-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-ssh",
            "log_config": [],
            "name": "tf-vpc-allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/networks/gogle-vpc",
            "priority": 1000,
            "project": "midyear-spot-368821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.workspace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-11-22T02:00:16.555-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-web",
            "log_config": [],
            "name": "tf-vpc-allow-web",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/networks/gogle-vpc",
            "priority": 1000,
            "project": "midyear-spot-368821",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/firewalls/tf-vpc-allow-web",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "web-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.terraform_remote_state.workspace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "db_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.90.0.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2022-11-27T17:21:43.011-08:00",
            "id": "projects/midyear-spot-368821/global/addresses/db",
            "name": "db",
            "network": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/networks/gogle-vpc",
            "prefix_length": 24,
            "project": "midyear-spot-368821",
            "purpose": "VPC_PEERING",
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/addresses/db"
          },
          "dependencies": [
            "data.terraform_remote_state.workspace"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/rocky-linux-cloud/global/images/rocky-linux-8-optimized-gcp-v20221102",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/zones/asia-northeast3-a/disks/bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Skylake",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/midyear-spot-368821/zones/asia-northeast3-a/instances/bastion",
            "instance_id": "6240076649452348253",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "cuapJryOPFs=",
            "metadata_startup_script": "  echo \"export USE_GKE_GCLOUD_AUTH_PLUGIN=True\" \u003e\u003e /etc/profile\n  sudo yum install -y google-cloud-sdk-gke-gcloud-auth-plugin\n  sudo yum install -y kubectl\n  sudo yum install -y bash-completion\n  source \u003c(kubectl completion bash)\n  echo \"gcloud container clusters get-credentials gogle-cluster --zone asia-northeast3 --project midyear-spot-368821 \u003e /dev/null 2\u003e\u00261\" \u003e\u003e /etc/profile\n  echo \"source \u003c(kubect [...]
            "name": "bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.64.214.20",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/global/networks/gogle-vpc",
                "network_ip": "10.0.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/regions/asia-northeast3/subnetworks/gogle-subnet",
                "subnetwork_project": "midyear-spot-368821"
              }
            ],
            "project": "midyear-spot-368821",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/midyear-spot-368821/zones/asia-northeast3-a/instances/bastion",
            "service_account": [
              {
                "email": "346726030341-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform",
                  "https://www.googleapis.com/auth/compute.readonly",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/source.full_control",
                  "https://www.googleapis.com/auth/userinfo.email"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion"
            ],
            "tags_fingerprint": "NfTTNVh6sLU=",
            "zone": "asia-northeast3-a"
          },
          "dependencies": [
            "data.template_file.startup_script",
            "data.terraform_remote_state.workspace"
          ]
        }
      ]
    }
  ]
}